--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "uuid": "^9.0.0",
     "vue": "^3.3.4"
